--- a/bubbleSort.html
+++ b/bubbleSort.html
@@ -27,14 +27,11 @@
 
 <body class="bg-threeAndHalf scrollbar scrollbar_style" id="the_main_id">
   <section id="topPageIcon">
-    
     <span class="sidenav-icon" type="button" onclick="openOrCloseNav(1,1)"><i
         class="sidenav-icon fas fa-bars"></i></span>
   </section>
-
   <section id="topPage">
   </section>
-  
   <div id="mySidenav" class="sidenav scrollbar scrollbar_style">
     <a href="javascript:void(0)" class="closebtn" onclick="openOrCloseNav(0,0)">&times;</a>
     <a href="index.html">מי אנחנו?</a>
@@ -64,18 +61,14 @@
     <a href="mergeSort.html">מיון מיזוג</a>
   </div>
   <section id="main" onclick="openOrCloseNav(0,0)">
-
     <h1 class="head-left">Let's learn C</h1>
     <h1 class="head-right">מיון בועות</h1>
-
-
     <div class="First-Para">
       <p>
         מיון בועות נחשב למיון "מבוסס השוואות" , תפקידו לסדר את ערכי המערך מהקטן לגדול (ניתן לשנות את האלגוריתם כך שימיין
         מהגדול לקטן).
       </p>
     </div>
-
     <h3 class="head-right">מיון זה עובד בצורה הבאה:</h3>
     <div class="First-Para">
       <p>
@@ -88,19 +81,13 @@
         <br>
       </p>
     </div>
-
-
     <h3 class="head-right">תהליך המיון:</h3>
     <div class="First-Para">
       <p>
         נראה תהליך זה על ידי דוגמה על המערך הבא:
       </p>
     </div>
-
-
     <img class="pic_big" src="assest/TablesForBubbleSort/Bubble_Sort_1.png" alt="table_1">
-
-
     <div class="First-Para">
       <p>
         נבצע עליו מיון בועות.
@@ -108,11 +95,7 @@
         ראשית, נשווה בין הערכים בתא 0 (1) לתא 1 (5).
       </p>
     </div>
-
-
     <img class="pic_big" src="assest/TablesForBubbleSort/Bubble_Sort_2.png" alt="">
-
-
     <div class="First-Para">
       <p>
         בגלל ש 5 גדול יותר מ 1 לא מתבצעת החלפה והמערך נשאר ללא שינוי.
@@ -120,27 +103,18 @@
         <br>
       </p>
     </div>
-
-
     <div class="First-Para">
       <p>
         נשווה בין הערכים בתא 1 (5) לתא 2 (2).
       </p>
     </div>
-
-
     <img class="pic_big" src="assest/TablesForBubbleSort/Bubble_Sort_3.png" alt="">
-
-
     <div class="First-Para">
       <p>
         בגלל ש 5 גדול מ 2 מתבצעת החלפה והמערך יראה כך:
       </p>
     </div>
-
-
     <img class="pic_big" src="assest/TablesForBubbleSort/Bubble_Sort_4.png" alt="">
-
     <div class="First-Para">
       <p>
         <br>
@@ -148,21 +122,13 @@
         נשווה בין הערכים בתא 2 (5) לתא 3 (3).
       </p>
     </div>
-
-
     <img class="pic_big" src="assest/TablesForBubbleSort/Bubble_Sort_5.png" alt="">
-
-
     <div class="First-Para">
       <p>
         בגלל ש 5 גדול מ 3 מתבצעת החלפה והמערך יראה כך:
       </p>
     </div>
-
-
     <img class="pic_big" src="assest/TablesForBubbleSort/Bubble_Sort_6.png" alt="">
-
-
     <div class="First-Para">
       <p>
         <br>
@@ -170,9 +136,7 @@
         נשווה בין הערכים בתא 3 (5) לתא 4 (12).
       </p>
     </div>
-
     <img class="pic_big" src="assest/TablesForBubbleSort/Bubble_Sort_7.png" alt="">
-
     <div class="First-Para">
       <p>
         בגלל ש12 גדול מ 5 לא מתבצעת החלפה והמערך נשאר ללא שינוי.
@@ -180,18 +144,12 @@
         <br>
       </p>
     </div>
-
-
-
     <div class="First-Para">
       <p>
         נשווה בין הערכים בתא 4 (12) לתא 5 (25).
       </p>
     </div>
-
-
     <img class="pic_big" src="assest/TablesForBubbleSort/Bubble_Sort_8.png" alt="">
-
     <div class="First-Para">
       <p>
         בגלל ש25 גדול מ 12 לא מתבצעת החלפה והמערך נשאר ללא שינוי.
@@ -199,27 +157,18 @@
         <br>
       </p>
     </div>
-
-
-
     <div class="First-Para">
       <p>
         נשווה בין הערכים בתא 5 (25) לתא 6 (9).
       </p>
     </div>
-
-
     <img class="pic_big" src="assest/TablesForBubbleSort/Bubble_Sort_9.png" alt="">
-
     <div class="First-Para">
       <p>
         בגלל ש25 גדול מ 9 מתבצעת החלפה והמערך יראה כך:
       </p>
     </div>
-
     <img class="pic_big" src="assest/TablesForBubbleSort/Bubble_Sort_10.png" alt="">
-
-
     <div class="First-Para">
       <p>
         <br>
@@ -239,18 +188,12 @@
         <br>
       </p>
     </div>
-
-
     <img class="pic_big" src="assest/TablesForBubbleSort/Bubble_Sort_11.png" alt="">
-
-
     <div class="First-Para">
       <p>
         כעת ניתן לראות שהמערך ממוין ואין צורך להמשיך בבדיקות.
       </p>
     </div>
-
-
     <h3 class="head-right">דוגמה לקוד של מיון בועות:</h3>
     <div class="row">
       <div class="col-md-6">
@@ -267,7 +210,7 @@
       <div class="col-md-6">
         <figure class="code">
           <figcaption id="example1-caption">CODE:</figcaption>
-          <pre aria-describedby="example1-description" aria-labelledby="example1-caption" class="line-numbers"><div aria-hidden="true"><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span></div><code contenteditable="true" tabindex="0" spellcheck="false"><i>#include</i> <u>&lt;stdio.h&gt;</u>
+          <pre aria-describedby="example1-description" aria-labelledby="example1-caption" class="line-numbers"><div aria-hidden="true"><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span></div><code contenteditable="true" tabindex="0" spellcheck="false"><i>#include</i> <u>&lt;stdio.h&gt;</u>
 
 <b>void</b> swap(<b>int</b> *<i>first</i>,<b>int</b> *<i>second</i>) <em>//swap between two variables.</em>
 {
