--- a/functions.html
+++ b/functions.html
@@ -27,7 +27,7 @@
 
 <body class="bg-three scrollbar scrollbar_style" id="the_main_id">
   <section id="topPageIcon">
-    
+
     <span class="sidenav-icon" type="button" onclick="openOrCloseNav(1,1)"><i
         class="sidenav-icon fas fa-bars"></i></span>
   </section>
@@ -268,7 +268,7 @@
       <div class="col-md-6">
         <figure class="code">
           <figcaption id="example1-caption">CODE 3:</figcaption>
-          <pre aria-describedby="example1-description" aria-labelledby="example1-caption" class="line-numbers"><div aria-hidden="true"><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span></div><code contenteditable="true" tabindex="0" spellcheck="false"><i>#include</i> <u>&lt;stdio.h&gt;</u>
+          <pre aria-describedby="example1-description" aria-labelledby="example1-caption" class="line-numbers"><div aria-hidden="true"><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span></div><code contenteditable="true" tabindex="0" spellcheck="false"><i>#include</i> <u>&lt;stdio.h&gt;</u>
 <b>int</b> avg(<b>int</b> *<i>arr</i> , <b>int</b> <i>sizeOfArr</i>); <em>// Before main function.</em>
 <b>void</b> main()
 {
