--- a/index.html
+++ b/index.html
@@ -11,33 +11,24 @@
   <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <!-- CSS -->
-
   <!-- Bootstrap Scripts -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
-
   <!-- Java Script -->
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
   <script type="text/javascript" src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js"></script>
   <script type="text/javascript" src="js/jquery.touchSwipe.min.js"></script>
   <script type="text/javascript" src="js/code.js"></script>
-
 </head>
 
 <body class="bg-oneAndHalf scrollbar scrollbar_style" id="the_main_id">
- 
   <section id="topPageIcon">
-
-    <span class="sidenav-icon" type="button" onclick="openOrCloseNav(1,1)"><i
-        class="sidenav-icon fas fa-bars"></i>
-      </span>
-
+    <span class="sidenav-icon" type="button" onclick="openOrCloseNav(1,1)"><i class="sidenav-icon fas fa-bars"></i>
+    </span>
   </section>
-
   <section id="topPage">
   </section>
-
   <div id="mySidenav" class="sidenav scrollbar scrollbar_style">
     <a href="javascript:void(0)" class="closebtn" onclick="openOrCloseNav(0,0)">&times;</a>
     <a href="index.html"><span class="colorcheck">מי אנחנו?</span></a>
@@ -70,11 +61,9 @@
     <div class="swipe-area"></div>
     <h1 id="title" class="head-left">Let's learn C</h1>
     <h1 class="head-right">ברוכים הבאים לאתר שלנו Let’s learn C</h1>
-
     <h3 class="head-right">קצת עלינו:</h3>
     <div class="First-Para">
       <p>
-
         שלושה סטודנטים למדעי המחשב במכון הטכנולוגי חולון – בעלי ציונים גבוהים בקורס "מבוא למדעי המחשב" ו "סדנה מתקדמת
         בתכנות".
         <br>
@@ -83,26 +72,20 @@
         זיו הוכמן – מתכנת.
         <br>
         אנזור טוריקאשווילי – מתכנת.
-
       </p>
     </div>
-
     <h3 class="head-right">הסיבה שבגללה החלטנו לעשות את הפרויקט הזה:</h3>
     <div class="First-Para">
       <p>
-
         בתור סטודנטים שעברו את שנה א' אנו יודעים כמה מייגעת וקשה היא, כמה מעט חומר בעברית יש על שפת c באתרים חיצוניים
         ואם כבר יש חומר הוא בד"כ ישן, לא מעודכן, לא מובן ובעיקר לא נוח לקריאה.<br> לכן, החלטנו ליצור אתר שמסביר בפשטות
         (כמה
         שאפשר כמובן) ומלא בדוגמאות קוד שניתן להעתיק לתוך סביבת העבודה של הלומד.
-
       </p>
     </div>
-
     <h3 class="head-right">צרו קשר:</h3>
     <div class="First-Para">
       <p>
-
         מקווים מאוד שהצלחנו לעזור, מוזמנים ליצור קשר במידה ומצאתם טעות / יש לכם רעיון לשיפור התוכן באתר.
         <br>
         <br>
@@ -113,8 +96,6 @@
         <a href="mailto:anzortorikashvili@gmail.com">לשליחת מייל לאנזור</a>
       </p>
     </div>
-
-
   </section>
 </body>
 
