--- a/insertionSort.html
+++ b/insertionSort.html
@@ -30,12 +30,11 @@
 
   <section id="topPageIcon">
 
-    <span class="sidenav-icon" type="button" onclick="openOrCloseNav(1,1)"><i
-        class="sidenav-icon fas fa-bars"></i>
-      </span>
+    <span class="sidenav-icon" type="button" onclick="openOrCloseNav(1,1)"><i class="sidenav-icon fas fa-bars"></i>
+    </span>
 
   </section>
-  
+
   <section id="topPage">
   </section>
 
@@ -68,10 +67,8 @@
     <a href="mergeSort.html">מיון מיזוג</a>
   </div>
   <section id="main" onclick="openOrCloseNav(0,0)">
-
     <h1 class="head-left">Let's learn C</h1><!-- את הכותרת שבצד שמאל נקשר לספרייה זו -->
     <h1 class="head-right">מיון הכנסה</h1><!-- את הכותרת המשנית נקשר לספרייה זו -->
-
     <!--מיון הכנסה-->
     <div class="First-Para">
       <p>
@@ -79,12 +76,9 @@
         מהגדול לקטן).
       </p>
     </div>
-
     <br>
     <h3 class="head-right">נראה תהליך זה על ידי דוגמה על המערך הבא:</h3>
-
     <img class="pic_big" src="assest/TablesForInsertionSort/Insertion_sort_1.png" alt="">
-
     <!--מיון זה מתבצע בצורה הבאה-->
     <div class="First-Para">
       <p>
@@ -105,12 +99,8 @@
         משתנה temp.
       </p>
     </div>
-
-
     <br>
     <h3 class="head-right">תהליך המיון:</h3>
-
-
     <!--תהליך המיון-->
     <div class="First-Para">
       <p>
@@ -118,17 +108,13 @@
         <br>
         <br>
         כעת אנחנו מתחילים לבצע את ההשוואה בין הערך שנמצא בtemp אל מול הערך שנמצא באינדקס 0.
-      
       </p>
     </div>
-
-
     <img class="pic_big" src="assest/TablesForInsertionSort/Insertion_sort_2.png" alt="">
     <br>
     <div class="First-Para">
       <img class="pic_sm" src="assest/TablesForInsertionSort/Insertion_sort_3.png" alt="">
     </div>
-
     <!--תהליך מיון-->
     <div class="First-Para">
       <p>
@@ -137,8 +123,6 @@
         בגלל שהערך 7 גדול מהערך 2 אז אנחנו יודעים בוודאות שכל האיברים בצד השמאלי יהיו קטנים יותר מ 7.
       </p>
     </div>
-
-
     <!--תהליך מיון-->
     <div class="First-Para">
       <p>
@@ -147,22 +131,16 @@
         כעת אנו עוברים לתא מספר 2 ומכניסים את הערך שלו (4) למשתנה temp ומתחילים השוואות אל מול התאים משמאלו.
       </p>
     </div>
-
-
     <!--תהליך מיון-->
     <div class="First-Para">
       <p>
         משווים ראשית מול תא מספר 1 ורואים שהערך 7 גדול מהערך 4.
       </p>
     </div>
-
-
     <img class="pic_big" src="assest/TablesForInsertionSort/Insertion_sort_4.png" alt="">
-
     <div class="First-Para">
       <img class="pic_sm" src="assest/TablesForInsertionSort/Insertion_sort_5.png" alt="">
     </div>
-
     <div class="First-Para">
       <p>
         לכן נכניס את הערך 7 לתא מספר 2.
@@ -170,10 +148,7 @@
         בשלב זה תא מספר 1 נשאר ללא שינוי והמערך שלנו יראה כך :
       </p>
     </div>
-
-
     <img class="pic_big" src="assest/TablesForInsertionSort/Insertion_sort_6.png" alt="">
-
     <div class="First-Para">
       <br>
       עכשיו אנחנו עושים השוואה בין תא מספר 0 למשתנה ה temp ואנחנו רואים שהערך 4 גדול יותר מהערך 2 ולכן אנחנו עוצרים
@@ -187,11 +162,7 @@
       במקרה שלנו j היה שווה ל 0 ו j+1 ייתן לנו את תא מספר 1 והמערך שלנו יראה כך:
       </p>
     </div>
-
-
     <img class="pic_big" src="assest/TablesForInsertionSort/Insertion_sort_7.png" alt="">
-
-
     <!--תהליך מיון-->
     <div class="First-Para">
       <p>
@@ -200,28 +171,18 @@
         כעת נתחיל להשוות את הערך ב-temp לערך שנמצא בתא מספר 2 (7).
       </p>
     </div>
-
-
     <img class="pic_big" src="assest/TablesForInsertionSort/Insertion_sort_8.png" alt="">
-
-
     <div class="First-Para">
       <img class="pic_sm" src="assest/TablesForInsertionSort/Insertion_sort_9.png" alt="">
     </div>
-
-
     <div class="First-Para">
       <p>
-        בגלל שהערך 3 קטן מהערך 7 אנו נבצע החלפה. 
+        בגלל שהערך 3 קטן מהערך 7 אנו נבצע החלפה.
         <br>
         הערך 7 יכנס לתא מספר 3 והמערך יראה כך:
       </p>
     </div>
-
-
     <img class="pic_big" src="assest/TablesForInsertionSort/Insertion_sort_10.png" alt="">
-
-
     <br>
     <br>
     <!--תהליך מיון-->
@@ -231,25 +192,15 @@
         לאחר מכן אנחנו משווים את הערך שב-temp לערך שבתא מספר 1 (4).
       </p>
     </div>
-
-
     <img class="pic_big" src="assest/TablesForInsertionSort/Insertion_sort_11.png" alt="">
-
-
     <div class="First-Para">
       <img class="pic_sm" src="assest/TablesForInsertionSort/Insertion_sort_9.png" alt="">
     </div>
-
-
     <div class="First-Para">
       <br>
       בגלל ש 3 קטן מ 4 אז גם כאן מתבצע שינוי והמערך שלנו יראה כעת כך:
     </div>
-
-
     <img class="pic_big" src="assest/TablesForInsertionSort/Insertion_sort_12.png" alt="">
-
-
     <!--תהליך מיון-->
     <div class="First-Para">
       <p>
@@ -257,16 +208,10 @@
         לאחר מכן משווים את הערך 3 לערך 2 שנמצא בתוך תא מספר 0.
       </p>
     </div>
-
-
     <img class="pic_big" src="assest/TablesForInsertionSort/Insertion_sort_13.png" alt="">
-
-
     <div class="First-Para">
       <img class="pic_sm" src="assest/TablesForInsertionSort/Insertion_sort_9.png" alt="">
     </div>
-
-
     <div class="First-Para">
       <p>
         ניתן לראות שהערך 3 גדול מהערך 2.
@@ -274,66 +219,42 @@
         לכן נעצור בשלב זה את ההשוואות ונכניס את הערך 3 לתוך תא מספר 1 וכעת המערך יראה כך:
       </p>
     </div>
-
-
     <img class="pic_big" src="assest/TablesForInsertionSort/Insertion_sort_14.png" alt="">
-
-
     <!--תהליך מיון-->
     <div class="First-Para">
       <p>
         <br>
         כעת אנחנו עושים את הסבב הרביעי שלנו וזה יהיה הסבב האחרון כי הגענו לסוף המערך.
-
         <br>
         לא קשה לראות שהערך 8 גדול יותר מכל האיברים במערך.
-
         <br>
         לכן כבר על ההשוואה הראשונה של הערך 8 לערך 7 אנו נבין שהמערך ממוין.
-
         <br>
         אין צורך להמשיך בהשוואות והמערך הסופי שלנו יראה כך:
-
         <br>
       </p>
     </div>
-
-
     <img class="pic_big" src="assest/TablesForInsertionSort/Insertion_sort_14.png" alt="">
-
-
     <div class="First-Para">
       <p>
         ובכך מסיימים את מיון ההכנסה.
       </p>
     </div>
-
     <br>
     <h3 class="head-right">דוגמה לקוד של מיון הכנסה:</h3>
-
     <!--דוגמה לקוד-->
     <div class="row">
-
       <div class="col-md-6">
-
         <div class="para">
-
           <p>
             זמן ריצה של מיון הכנסה במקרה הטוב ביותר עומד בסדר גודל O(n) ובמקרה הגרוע ביותר בסדר גודל של
             O(n<sup>2</sup>).
-
             <br>
             רצוי לציין שזה אינו אלגוריתם היחיד שמממש מיון הכנסה וקיימים כמה גרסאות של המיון הזה.
           </p>
         </div>
-
-
       </div>
-
-
       <div class="col-md-6">
-
-
         <figure class="code">
           <figcaption id="example1-caption">CODE 1:</figcaption>
           <pre aria-describedby="example1-description" aria-labelledby="example1-caption" class="line-numbers"><div aria-hidden="true"><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span></div><code contenteditable="true" tabindex="0" spellcheck="false"><i>#include</i> <u>&lt;stdio.h&gt;</u>
@@ -356,24 +277,17 @@
 }
             </code></pre>
         </figure>
-
       </div>
-
     </div>
-
-
     <div class="First-Para">
       <p>
         i ו j אלו הם האינדקסים שבעזרתם אנו זזים בין תאים במערך.
-
         <br>
         i מסמל לנו את התא שהערך שלו יכנס למשתנה temp ו-j מציין את כל האיברים שאותם אנחנו נשווה לtemp.
-
         <br>
         while(j >= 0 && temp &lt; arr[j]) – כל עוד לא הגענו לתא אפס וכל עוד הערך במשתנה העזר שלנו קטן יותר מאיברי המערך
         נמשיך לבצע החלפות של הערכים בתאים. </p>
     </div>
-
   </section>
 </body>
 
