--- a/oneDimLoops.html
+++ b/oneDimLoops.html
@@ -31,10 +31,9 @@
 
   <section id="topPageIcon">
 
-    <span class="sidenav-icon" type="button" onclick="openOrCloseNav(1,1)"><i
-      class="sidenav-icon fas fa-bars"></i>
+    <span class="sidenav-icon" type="button" onclick="openOrCloseNav(1,1)"><i class="sidenav-icon fas fa-bars"></i>
     </span>
-  
+
   </section>
 
   <section id="topPage">
@@ -72,7 +71,6 @@
 
     <h1 class="head-left">Let's learn C</h1><!-- את הכותרת שבצד שמאל נקשר לספרייה זו -->
     <h1 class="head-right">לולאות</h1><!-- את הכותרת המשנית נקשר לספרייה זו -->
-
     <div class="First-Para">
       <p>
         אנו משתמשים בלולאות כאשר יש צורך ברשימת קוד רב ש"חוזר על עצמו" או כמעט "חוזר על עצמו".<br>
@@ -80,9 +78,7 @@
         (בדרך כלל, קיימת החרגה אם הלולאה מבצעת פעולה אחת בלבד).
       </p>
     </div>
-
     <h3 class="head-right">סוגי לולאות:</h3>
-
     <div class="First-Para">
       <ul>
         <li>
@@ -97,15 +93,12 @@
       </ul>
       </p>
     </div>
-    
     <br>
     <br>
     <br>
     <br>
     <br>
-  
     <h3 class="head-right">חותמת הלולאות תיראה כך:</h3>
-    
     <br>
     <div class="row">
       <div class="col-md-6">
@@ -209,20 +202,11 @@
             </code></pre>
         </figure>
       </div>
-      <!--COL MD 6 - FOR CODE-->
     </div>
-    <!--ROW-->
-
     <br>
-
-
-
     <div class="row">
-
       <div class="col-md-6">
-
         <div class="para">
-
           <p>
             נוכל לרשום:
             <br>
@@ -234,18 +218,9 @@
                 i באחד בדיוק.</li>
             </ol>
           </p>
-
-
         </div>
-        <!--para-->
-
-
       </div>
-      <!--COL MD 6 - FOR TEXT-->
-
-
       <div class="col-md-6">
-
         <figure class="code">
           <figcaption id="example1-caption">CODE 5:</figcaption>
           <pre aria-describedby="example1-description" aria-labelledby="example1-caption" class="line-numbers"><div aria-hidden="true"><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span></div><code contenteditable="true" tabindex="0" spellcheck="false"><i>#include</i> <u>&lt;stdio.h&gt;</u>
@@ -256,14 +231,9 @@
   {
     printf(<u>"%d\n"</u>, i);
   }
-}  
-          </code></pre>
+}</code></pre>
         </figure>
-
       </div>
-      <!--COL MD 6 - FOR CODE-->
-
-
     </div>
     <br>
     <h3 class="head-right">דוגמה ללולאת while:</h3>
@@ -275,9 +245,7 @@
             שflag ישתנה ל0 ולולאת הwhile שלנו תפסיק להתקיים.
           </p>
         </div>
-        <!--para-->
       </div>
-      <!--COL MD 6 - FOR TEXT-->
       <div class="col-md-6">
         <figure class="code">
           <figcaption id="example1-caption">CODE 6:</figcaption>
@@ -296,8 +264,7 @@
       counter++;
     }
   }
-}  
-          </code></pre>
+}</code></pre>
         </figure>
       </div>
     </div>
@@ -313,9 +280,7 @@
             *אין צורך לתת ערך התחלתי למשתנה number כי הלולאה תרוץ פעם אחת לפחות.
           </p>
         </div>
-        <!--para-->
       </div>
-      <!--COL MD 6 - FOR TEXT-->
       <div class="col-md-6">
         <figure class="code">
           <figcaption id="example1-caption">CODE 7:</figcaption>
