--- a/printAndScan.html
+++ b/printAndScan.html
@@ -26,15 +26,10 @@
 </head>
 
 <body class="bg-two scrollbar scrollbar_style" id="the_main_id">
-
   <section id="topPageIcon">
-
-    <span class="sidenav-icon" type="button" onclick="openOrCloseNav(1,1)"><i
-        class="sidenav-icon fas fa-bars"></i>
-      </span>
-
+    <span class="sidenav-icon" type="button" onclick="openOrCloseNav(1,1)"><i class="sidenav-icon fas fa-bars"></i>
+    </span>
   </section>
-  
   <section id="topPage">
   </section>
 
@@ -69,7 +64,6 @@
   <section id="main" onclick="openOrCloseNav(0,0)">
     <h1 class="head-left">Let's learn C</h1>
     <h1 class="head-right">קלט ופלט</h1>
-
     <h3 class="head-right">פלט</h3>
     <!--First paragraph-->
     <div class="First-Para">
@@ -93,9 +87,7 @@
       </p>
     </div>
     <!--END FIRST PARA-->
-
     <!--Second paragraph-->
-
     <div class="row">
       <div class="col-md-6">
         <div class="para">
@@ -127,10 +119,7 @@
         </figure>
       </div>
     </div>
-
-
     <!--END SECOND PARAGRAPH-->
-
     <!--Third paragraph-->
     <h3 class="head-right">קלט</h3>
     <div class="First-Para">
@@ -146,12 +135,8 @@
         <br>
       </p>
     </div>
-
     <!--END THIRD PARAGRAPH-->
-
-
     <!--fourth paragraph-->
-
     <div class="row">
       <div class="col-md-6">
         <div class="para">
@@ -196,21 +181,8 @@
         <li><span dir="ltr">%u -&gt; unsigned int</span></li>
         <li><span dir="ltr"> %ld -&gt; long</span></li>
       </ul>
-      <!--TABLE-->
-
     </div>
-    <!--End fifth pargraph-->
   </section>
 </body>
 
 </html>
-
-
-
-
-
-
-
-<!--CODE2
-  
-END CODE-->
