--- a/quickSort.html
+++ b/quickSort.html
@@ -30,12 +30,11 @@
 
   <section id="topPageIcon">
 
-    <span class="sidenav-icon" type="button" onclick="openOrCloseNav(1,1)"><i
-        class="sidenav-icon fas fa-bars"></i>
-      </span>
+    <span class="sidenav-icon" type="button" onclick="openOrCloseNav(1,1)"><i class="sidenav-icon fas fa-bars"></i>
+    </span>
 
   </section>
-  
+
   <section id="topPage">
   </section>
 
@@ -68,20 +67,15 @@
     <a href="mergeSort.html">מיון מיזוג</a>
   </div>
   <section id="main" onclick="openOrCloseNav(0,0)">
-
     <h1 class="head-left">Let's learn C</h1>
     <h2 class="head-right">מיון מהיר (quick sort)</h2>
-
     <div class="First-Para">
       <p>
         מיון מהיר נחשב למיון "מבוסס השוואות" , תפקידו לסדר את ערכי המערך מהקטן לגדול (ניתן לשנות את האלגוריתם כך שימיין
         מהגדול לקטן).
-
         <br>
       </p>
     </div>
-
-
     <!--PIVOT-->
     <h3 class="head-right">pivot</h3>
     <div class="First-Para">
@@ -94,7 +88,6 @@
         pivot יכול להיות האיבר הראשון, אחרון או כל מספר באמצע של המערך (תלוי לפי הקוד).
       </p>
     </div>
-
     <!--מיון זה עובד בצורה הבאה-->
     <h3 class="head-right">מיון זה עובד בצורה הבאה:</h3>
     <div class="First-Para">
@@ -109,8 +102,6 @@
         המערך פחות אחד).
       </p>
     </div>
-
-
     <!--מיון זה עובד בצורה הבאה-->
     <div class="First-Para">
       <p>
@@ -119,7 +110,6 @@
         ראשית, נשווה את pivot לערכים מתחילת המערך (במקום ה-j).
       </p>
     </div>
-
     <!--מיון זה עובד בצורה הבאה-->
     <div class="First-Para">
       <p>
@@ -131,7 +121,6 @@
         יהיו בצד ימין והאיברים הקטנים יהיו בצד שמאל) לכן נבצע החלפה בין הערך בתא j לערך שבתא i.
       </p>
     </div>
-
     <!--מיון זה עובד בצורה הבאה-->
     <div class="First-Para">
       <p>
@@ -142,13 +131,10 @@
           href="recursion.html">רקורסיות</a>).
       </p>
     </div>
-
     <!--דוגמה לביצוע המיון:-->
     <br>
     <h3 class="head-right">דוגמה לביצוע המיון:</h3>
     <img class="pic_med" src="assest/TablesForQuickSort/quick_sort_1.png" alt="table_1">
-
-
     <div class="First-Para">
       <p>
         ראשית, ניקח את הערך בתא האחרון של המערך (8) להיות ה-pivot.
@@ -161,7 +147,6 @@
         <br>
       </p>
     </div>
-
     <!--דוגמה לביצוע המיון:-->
     <div class="First-Para">
       <p>
@@ -170,16 +155,10 @@
         (8)
       </p>
     </div>
-
-
     <img class="pic_med" src="assest/TablesForQuickSort/quick_sort_2.png" alt="table_2">
-
-
     <div class="First-Para">
       <img class="pic_sm" src="assest/TablesForQuickSort/quick_sort_3.png" alt="table_3">
     </div>
-
-
     <!--דוגמה לביצוע המיון-->
     <div class="First-Para">
       <p>
@@ -192,23 +171,15 @@
         (8)
       </p>
     </div>
-
-
     <img class="pic_med" src="assest/TablesForQuickSort/quick_sort_4.png" alt="">
-
-
     <div class="First-Para">
       <img class="pic_sm" src="assest/TablesForQuickSort/quick_sort_3.png" alt="table_3">
     </div>
-
-
     <div class="First-Para">
       <p>
         בגלל ש97 גדול מ8 לא מבצעים החלפה ומגדילים את j ב-1.
       </p>
     </div>
-
-
     <div class="First-Para">
       <p>
         <br>
@@ -219,9 +190,7 @@
         (8).
       </p>
     </div>
-
     <img class="pic_med" src="assest/TablesForQuickSort/quick_sort_6.png" alt="">
-
     <div class="First-Para">
       <img class="pic_sm" src="assest/TablesForQuickSort/quick_sort_3.png" alt="table_3">
     </div>
@@ -230,8 +199,6 @@
         בגלל ש14 גדול מ8 לא מבצעים החלפה ומגדילים את j ב-1
       </p>
     </div>
-
-
     <div class="First-Para">
       <p>
         <br>
@@ -242,15 +209,10 @@
         (8).
       </p>
     </div>
-
     <img class="pic_med" src="assest/TablesForQuickSort/quick_sort_9.png" alt="">
-
-
     <div class="First-Para">
       <img class="pic_sm" src="assest/TablesForQuickSort/quick_sort_3.png" alt="table_3">
     </div>
-
-
     <div class="First-Para">
       <p>
         <br>
@@ -259,22 +221,15 @@
         בגלל ש1 קטן מ8 מבצעים החלפה, מגדילים את j ו i ב-1 והמערך יראה כך:
       </p>
     </div>
-
     <img class="pic_med" src="assest/TablesForQuickSort/quick_sort_10.png" alt="">
-
-
     <div class="First-Para">
       <img class="pic_sm" src="assest/TablesForQuickSort/quick_sort_3.png" alt="table_3">
     </div>
-
-
     <div class="First-Para">
       <p>
         אנו ביצענו החלפה בין הערכים בתא i ובתא j.
       </p>
     </div>
-
-
     <div class="First-Para">
       <p>
         <br>
@@ -290,29 +245,20 @@
         לאחר ביצוע הפעולה, המערך יראה כך:
       </p>
     </div>
-
     <img class="pic_med" src="assest/TablesForQuickSort/quick_sort_11.png" alt="">
-
-
     <div class="First-Para">
       <p>
         <br>
         נמשיך בביצוע ההשוואות, לאחר ביצוע סבב שני המערך יראה כך:
       </p>
     </div>
-
-
     <img class="pic_med" src="assest/TablesForQuickSort/quick_sort_12.png" alt="">
-
     <br>
     <br>
     <h3 class="head-right">דוגמה לקוד של מיון מהיר:</h3>
     <div class="row">
-
       <div class="col-md-6">
-
         <div class="para">
-
           <p>
             זמן ריצה של מיון מהיר במקרה הטוב הינו O(log(n)).
             <br>
@@ -323,10 +269,9 @@
         </div>
       </div>
       <div class="col-md-6">
-
         <figure class="code">
           <figcaption id="example1-caption">CODE:</figcaption>
-          <pre aria-describedby="example1-description" aria-labelledby="example1-caption" class="line-numbers"><div aria-hidden="true"><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span></div><code contenteditable="true" tabindex="0" spellcheck="false"><i>#include</i> <u>&lt;stdio.h&gt;</u>
+          <pre aria-describedby="example1-description" aria-labelledby="example1-caption" class="line-numbers"><div aria-hidden="true"><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span></div><code contenteditable="true" tabindex="0" spellcheck="false"><i>#include</i> <u>&lt;stdio.h&gt;</u>
 
 <b>void</b> swap(<b>int</b> *<i>num1</i>, <b>int</b> *<i>num2</i>)
 {
