--- a/firstProgram.html
+++ b/firstProgram.html
@@ -28,15 +28,10 @@
 </head>
 
 <body class="bg scrollbar scrollbar_style" id="the_main_id">
-  
   <section id="topPageIcon">
-
-    <span class="sidenav-icon" type="button" onclick="openOrCloseNav(1,1)"><i
-        class="sidenav-icon fas fa-bars"></i>
-      </span>
-
+    <span class="sidenav-icon" type="button" onclick="openOrCloseNav(1,1)"><i class="sidenav-icon fas fa-bars"></i>
+    </span>
   </section>
-
   <section id="topPage">
   </section>
 
