--- a/statments.html
+++ b/statments.html
@@ -26,16 +26,15 @@
 
 </head>
 
-<body class="bg-oneAndHalf scrollbar scrollbar_style" id="the_main_id"> 
+<body class="bg-oneAndHalf scrollbar scrollbar_style" id="the_main_id">
 
   <section id="topPageIcon">
 
-    <span class="sidenav-icon" type="button" onclick="openOrCloseNav(1,1)"><i
-        class="sidenav-icon fas fa-bars"></i>
-      </span>
+    <span class="sidenav-icon" type="button" onclick="openOrCloseNav(1,1)"><i class="sidenav-icon fas fa-bars"></i>
+    </span>
 
   </section>
-  
+
   <section id="topPage">
   </section>
 
@@ -70,7 +69,6 @@
   <section id="main" onclick="openOrCloseNav(0,0)">
     <h1 class="head-left">Let's learn C</h1>
     <h1 class="head-right">משפטי בקרה</h1>
-
     <!--first paragraph-->
     <div class="First-Para">
       <p>
@@ -131,10 +129,8 @@
         </li>
       </ul>
     </div>
-
     <!--Second paragraph-->
     <br>
-
     <h3 class="head-right">נראה דוגמה במילים ולאחר מכן נפתור אותה בקוד:</h3>
     <div class="row">
       <div class="col-md-6">
@@ -150,9 +146,7 @@
         </div>
       </div>
       <div class="col-md-6">
-
         <figure class="code">
-
           <figcaption id="example1-caption">CODE:</figcaption>
           <pre aria-describedby="example1-description" aria-labelledby="example1-caption" class="line-numbers"><div aria-hidden="true"><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span></div><code contenteditable="true" tabindex="0" spellcheck="false"><i>#include</i> <u>&lt;stdio.h&gt;</u>
 <b>void</b> main() <em>// main function - this is the code that will be executed when we click f5.</em>
