--- a/string.html
+++ b/string.html
@@ -30,12 +30,11 @@
 
   <section id="topPageIcon">
 
-    <span class="sidenav-icon" type="button" onclick="openOrCloseNav(1,1)"><i
-        class="sidenav-icon fas fa-bars"></i>
-      </span>
+    <span class="sidenav-icon" type="button" onclick="openOrCloseNav(1,1)"><i class="sidenav-icon fas fa-bars"></i>
+    </span>
 
   </section>
-  
+
   <section id="topPage">
   </section>
 
@@ -67,12 +66,10 @@
     <a href="quickSort.html">מיון מהיר</a>
     <a href="mergeSort.html">מיון מיזוג</a>
   </div>
-  
-  <section id="main" onclick="openOrCloseNav(0,0)">
 
+  <section id="main" onclick="openOrCloseNav(0,0)">
     <h1 class="head-left">Let's learn C</h1>
     <h1 class="head-right">מחרוזות</h1>
-
     <h3 class="head-right">מהי מחרוזת ?</h3>
     <div class="First-Para">
       <p>
@@ -83,9 +80,7 @@
         לצערנו , בשפת c טיפוס בשם מחרוזת לא קיים ואנו צריכים לעבוד עם מערך של chars ולקרוא לספרייה בשם string.h כדי לקבל
         את כל היכולות של מחרוזות לקוד שלנו.
       </p>
-
     </div>
-
     <h3 class="head-right">דוגמאות ליצירת משתנה של מחרוזת:</h3>
     <div class="First-Para">
       <p>
@@ -94,19 +89,14 @@
         <span dir="ltr">char s[6] = {'H' , 'e' , 'l' , 'l' , 'o' ,'\0' };</span>
         <br>
         <span dir="ltr">char s = "Hello";</span>
-
       </p>
-
     </div>
-
     <h3 class="head-right"><span dir="ltr">/0</span></h3>
     <div class="First-Para">
       <p>
         נקרא גם null terminator ובעצם אומר לקוד שלנו מתי לעצור לקרוא תווים מהמחרוזת.
       </p>
-
     </div>
-
     <h3 class="head-right">פונקציות שימושיות למחרוזות:</h3>
     <div class="First-Para">
       <p>
@@ -123,34 +113,19 @@
         <br>
         strstr(s1,s2) = מחזירה פוינטר לפעם הראשונה שמחרוזת 2 הופיעה ב1
       </p>
-
     </div>
-
     <div class="row">
-
       <div class="col-md-6">
-
         <div class="para">
-
           <p>
             דוגמאות לשימוש בכמה מהפוקנציות:
           </p>
-
-
         </div>
-        <!--para-->
-
-
       </div>
-      <!--COL MD 6 - FOR TEXT-->
-
-
       <div class="col-md-6">
-
         <figure class="code">
-
           <figcaption id="example1-caption">CODE :</figcaption>
-          <pre aria-describedby="example1-description" aria-labelledby="example1-caption" class="line-numbers"><div aria-hidden="true"><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span></div><code contenteditable="true" tabindex="0" spellcheck="false"><i>#include</i> <u>&lt;stdio.h&gt;</u>
+          <pre aria-describedby="example1-description" aria-labelledby="example1-caption" class="line-numbers"><div aria-hidden="true"><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span></div><code contenteditable="true" tabindex="0" spellcheck="false"><i>#include</i> <u>&lt;stdio.h&gt;</u>
 <i>#include</i> <u>&lt;string.h&gt;</u>
 
 <b>void</b> main()
@@ -171,18 +146,10 @@
   len = strlen(s1);
   printf("%d",len); <em>// prints 10. (helloworld = 10 letters)</em>
 
-
-}    
-            </code></pre>
+}</code></pre>
         </figure>
       </div>
-      <!--COL MD 6 - FOR CODE-->
-
     </div>
-    <!--ROW-->
-
-
-
   </section>
 
 </body>
